Fixed a minor CSS alignment on booking pricing-summary #270

--- a/web/Styles/style.css
+++ b/web/Styles/style.css
@@ -2246,7 +2246,7 @@ html.boxshadow #loginBox .field-validation-error{
     height: 0;
     padding: 1px !important;
 }
-.w-PricingSummary tr.fees-note {
+.w-PricingSummary tr.fees-note * {
     font-style: italic;
     font-size: 0.83em;
     font-weight: normal !important;
